# radvision-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/seed/: product_spec.yaml
evaluation/: load_test.py  results.json  test_questions.yaml
scripts/: generate_corpus.py  ingest_corpus.py  run_evaluation.py
src/: config.py  state.py  tracking.py
src/agents/: escalation.py  graph.py  grounding.py  sufficiency.py  synthesizer.py  triage.py
src/rag/: ingest.py  reranker.py  retriever.py  rewriter.py  subgraph.py
src/tools/: compat_checker.py  log_analyzer.py
src/ui/: app.py
tests/: test_agents.py  test_integration.py  test_rag.py  test_rag_subgraph.py  test_tools.py
